# sunnyagent

./: .cursorrules  .env  .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  threads.db-shm  threads.db-wal
.claude/agents/: test-agent.md
.github/: copilot-instructions.md
.specify/memory/: constitution.md
backend/: db.py  main.py  models.py  prompts.py  registry.py  research_prompts.py  research_tools.py  stream_handler.py  supervisor.py
backend/agents/: __init__.py  general.py  loader.py  research.py  sql.py
backend/auth/: __init__.py  database.py  dependencies.py  models.py  router.py  security.py
backend/conversations/: __init__.py  database.py  models.py  router.py
backend/files/: __init__.py  database.py  models.py
backend/llm/: __init__.py  config.py  factory.py
backend/skills/: __init__.py  loader.py  registry.py
backend/tools/: __init__.py  container_pool.py  file_tools.py  sandbox.py
design-system/research-chat/: MASTER.md
dockerfiles/sandbox/: Dockerfile  requirements.txt
docs/: ai-dev-best-practices.md  architecture.md  feature-description.md  prototype.html  roadmap.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx
infra/: alembic.ini
infra/migrations/: env.py
research_chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: 003_create_files_table.sql  migrate_sqlite_to_pg.py  reset_admin.py  sunnyagent.sh
specs/001-multi-agent-chat/: spec.md
(+67 files in other folders)
